源码视图中，让不同状态时 checkbox 中的括号文字大小保持一致

--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,7 @@ em {
 .markdown-source-view.mod-cm6 .HyperMD-codeblock-begin {
     padding-top: 8px;
 }
+
+.cm-formatting.cm-formatting-task.cm-property {
+    font-size: unset;
+}
