--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,13 @@ em {
 .cm-formatting.cm-formatting-task.cm-property {
     font-size: unset;
 }
+
+pre.frontmatter {
+    line-height: 20px;
+}
+
+pre.frontmatter > button.copy-code-button {
+    margin: 0;
+    padding: 0;
+    line-height: inherit;
+}
